--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
     "react-scripts": "2.0.4",
+    "react-spinkit": "^3.0.0",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0"
   },
